--- a/blog-server/pom.xml
+++ b/blog-server/pom.xml
@@ -11,6 +11,15 @@
 
     <artifactId>blog-server</artifactId>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>com.sn</groupId>
