--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>blog-server</module>
         <module>common-server</module>
+        <module>blog-es-server</module>
     </modules>
 
     <!--maven 默认使用Java5,设置成Java8-->
@@ -51,4 +52,12 @@
             <version>1.2.28</version>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>alibab</id>
+            <name>alibaba</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+        </repository>
+    </repositories>
 </project>
