--- a/blog-server/pom.xml
+++ b/blog-server/pom.xml
@@ -25,6 +25,11 @@
     <dependencies>
         <dependency>
             <groupId>com.sn</groupId>
+            <artifactId>jpql-server</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sn</groupId>
             <artifactId>common-server</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
