--- a/blog-server/pom.xml
+++ b/blog-server/pom.xml
@@ -24,9 +24,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.sleepy</groupId>
-            <artifactId>so-jpql-template-engine</artifactId>
-            <version>1.0.0</version>
+            <groupId>com.sn</groupId>
+            <artifactId>jpql-server</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.sn</groupId>
