--- a/blog-server/src/main/resources/application.yml
+++ b/blog-server/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 #配置mysql数据库
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/simple_blog?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false&autoReconnect=true&failOverReadOnly=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://192.168.0.110:3306/simple_blog?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false&autoReconnect=true&failOverReadOnly=false&allowPublicKeyRetrieval=true
     #url: jdbc:mysql://122.51.193.191:3306/simple_blog?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false&autoReconnect=true&failOverReadOnly=false&allowPublicKeyRetrieval=true
     username: root
     password: 123456
