--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>blog-es-server</module>
         <module>jpql-server</module>
         <module>uni-dubbo</module>
+        <module>advanced-java</module>
     </modules>
 
     <!--maven 默认使用Java5,设置成Java8-->
